--- a/DBClient/loginwidget.ui
+++ b/DBClient/loginwidget.ui
@@ -262,7 +262,7 @@ QLineEdit:focus {
          </widget>
         </item>
         <item>
-         <widget class="QLineEdit" name="passworld_edit">
+         <widget class="QLineEdit" name="password_edit">
           <property name="minimumSize">
            <size>
             <width>0</width>
