完成canvas页面与登录

--- a/DBClient/res.qrc
+++ b/DBClient/res.qrc
@@ -4,5 +4,9 @@
         <file>res/shared.png</file>
         <file>res/unvisible.png</file>
         <file>res/visible.png</file>
+        <file>res/color_wheel.png</file>
+        <file>res/Eraser.png</file>
+        <file>res/pen.png</file>
+        <file>res/deflaut_head.jpg</file>
     </qresource>
 </RCC>
