--- a/DBClient/lobbywidget.ui
+++ b/DBClient/lobbywidget.ui
@@ -135,7 +135,7 @@ QLabel#name_lbl {
 }
 
 /* 退出账号按钮 (pushButton) - 幽灵按钮风格 */
-QPushButton#pushButton {
+QPushButton{
     background-color: transparent;
     border: 1px solid #555555;
     color: #aaaaaa;
@@ -143,12 +143,12 @@ QPushButton#pushButton {
     padding: 6px;
 }
 
-QPushButton#pushButton:hover {
+QPushButton:hover {
     border-color: #ff4d4d; /* 悬停变红，暗示危险操作/退出 */
     color: #ff4d4d;
 }
 
-QPushButton#pushButton:pressed {
+QPushButton:pressed {
     background-color: rgba(255, 77, 77, 0.1);
 }</string>
   </property>
@@ -189,6 +189,13 @@ QPushButton#pushButton:pressed {
       </layout>
      </item>
      <item>
+      <widget class="QPushButton" name="upload_btn">
+       <property name="text">
+        <string>上传头像</string>
+       </property>
+      </widget>
+     </item>
+     <item>
       <spacer name="verticalSpacer">
        <property name="orientation">
         <enum>Qt::Vertical</enum>
@@ -202,7 +209,7 @@ QPushButton#pushButton:pressed {
       </spacer>
      </item>
      <item>
-      <widget class="QPushButton" name="pushButton">
+      <widget class="QPushButton" name="return_btn">
        <property name="text">
         <string>退出账号</string>
        </property>
